k8s-test/nfs-client-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nfs-test-client
  namespace: default
spec:
  containers:
  - name: test-container
    image: alpine:latest
    command: ["/bin/sh", "-c", "while true; do sleep 3600; done"]
    volumeMounts:
    - name: nfs-volume
      mountPath: /mnt/nfs-data
  volumes:
  - name: nfs-volume
    nfs:
      server: 192.168.75.250
      path: /volume1/k8s
