k8s-test/pvc-test.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-test
spec:
  containers:
    - name: app
      image: busybox
      command: ["sleep", "3600"]
      volumeMounts:
        - name: data
          mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: test-pvc
