k8s-test/vw-data-copy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vw-data-copy
  namespace: vaultwarden
spec:
  restartPolicy: Never
  containers:
    - name: copy
      image: alpine:3.20
      command: ["sleep", "3600"]
      volumeMounts:
        - name: data
          mountPath: /data
  volumes:
    - name: data
      persistentVolumeClaim:
        claimName: vaultwarden-data-vaultwarden-0
