k8s-test/cloudflare-app-test.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: monitoring
  annotations:
    external-dns.alpha.kubernetes.io/target: "192.168.40.50" 
spec:
  ingressClassName: traefik
  entryPoints:
    - websecure # Matches Traefik's internal port 80 entrypoint
  routes:
  - match: Host(`grafana.tmatthews.casa`) # Traefik evaluates this dynamically
    kind: Rule
    services:
    - name: prometheus-grafana # Your internal Kubernetes app service
      port: 80

  tls:
    secretName: wildcard-tmatthews-casa-tls  # Uncomment when you have a valid TLS secret
